--- a/diary/accesories.css
+++ b/diary/accesories.css
@@ -7,3 +7,10 @@
 .hide{
 	opacity: 0%;
 }
+
+.active{
+	background-color: rgba(255, 255, 255, 0.02);
+	color: white;
+	z-index: 10;
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.426);
+}
